--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/blue/pace-theme-flash.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js"></script>
 
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKetfAxBzQItmL599Ra6vrVpwwtQv5hm8&callback=initMap"
+  type="text/javascript"></script>
+
 <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
 <link rel="stylesheet" href="vendor/font-awesome/font-awesome.min.css">
 <link rel="stylesheet" href="vendor/devicon-master/devicon.min.css">
