--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/blue/pace-theme-flash.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js"></script>
 
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKetfAxBzQItmL599Ra6vrVpwwtQv5hm8&callback=initMap"
-  type="text/javascript"></script>
-
 <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
 <link rel="stylesheet" href="vendor/font-awesome/font-awesome.min.css">
 <link rel="stylesheet" href="vendor/devicon-master/devicon.min.css">
@@ -450,7 +447,7 @@
 <script type="text/javascript" src="vendor/bootstrap/bootstrap.min.js"></script>
 <script type="text/javascript" src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 <script type="text/javascript" src="vendor/jquery-validation/jquery.validate.min.js"></script>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKetfAxBzQItmL599Ra6vrVpwwtQv5hm8&callback=initMap"></script>
 <script type="text/javascript" src="vendor/gmaps/gmaps.min.js"></script>
 <script type="text/javascript" src="vendor/easy-pie-chart/jquery.easypiechart.min.js"></script>
 <script type="text/javascript" src="js/vendor.js"></script>
