--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,16 @@
 
 
 <body>
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-102949735-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <div id="page" class="container">
   <div id="header">    
     <div class="header-min cv-section">
@@ -369,7 +379,6 @@
   <div id="contact-section" class="contact-panel panel visible-lg-block">
     <div class="panel-heading panel-default"><p class="panel-title">Formulário de Contato</p></div>
     <div class="panel-body">
-      <!-- <p class="contact-welcome">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In.</p> -->
       <form id="contact-form" class="contact-form form-horizontal" action="javascript:;">
         <fieldset>
           <div class="form-group">
@@ -408,12 +417,6 @@
         <div class="modal-header bg-success">
           <h4 class="modal-title">Obrigado por entrar em contato</h4>
         </div>
-        <!-- <div class="modal-body">
-          <p>
-            Duis a euismod libero. Suspendisse convallis facilisis.<br />
-            Fusce at purus et erat finibus volutpat. Donec vel accumsan odio.
-          </p>
-        </div> -->
       </div>
     </div>
   </div>
@@ -424,12 +427,6 @@
         <div class="modal-header bg-danger">
           <h4 class="modal-title">Ocorreu um erro, favor tentar novamente</h4>
         </div>
-        <!-- <div class="modal-body">
-          <p>
-            Duis a euismod libero. Suspendisse convallis facilisis.<br />
-            Fusce at purus et erat finibus volutpat. Donec vel accumsan odio.
-          </p>
-        </div> -->
       </div>
     </div>
   </div>
