--- a/index.htm
+++ b/index.htm
@@ -132,7 +132,7 @@
 	        <div class="col-md-4 col-sm-3">
         <div class="cv-item">
           <div class="col-md-3">
-            <img class="icon icons8-SQL-Filled" width="50" height="50" src="media/sqlfilled.png"/>
+            <img class="img-responsive" width="150" height="125" src="media/sqlfilled.png" style="margin-bottom:5px;"/>
           </div>
           <div class="col-md-9">
             <h3>SQL Server</h3>
