--- a/index.htm
+++ b/index.htm
@@ -273,12 +273,16 @@
         <h2>Formação Acadêmica</h2>
       </div>
       <div class="col-md-9">
+	    <div class="cv-item">
+          <h3>Análise e Desenvolvimento de Sistemas (Cursando)</h3>
+          <h4>FATEC - Faculdade de Tecnologia</h4>                   
+        </div>
         <div class="cv-item">
-          <h3>Especialização em Gestão de Projetos</h3>
+          <h3>Especialização em Gestão de Projetos (Cursando)</h3>
           <h4>FACENS - Faculdade de Engenharia de Sorocaba</h4>                    
         </div>
 		<div class="cv-item">
-          <h3>Engenharia Mecânica</h3>
+          <h3>Engenharia Mecânica (Dezembro de 2016)</h3>
           <h4>FACENS - Faculdade de Engenharia de Sorocaba</h4>                   
         </div>
       </div>
