Adiciona novos Cursos

--- a/index.htm
+++ b/index.htm
@@ -177,45 +177,60 @@
         <h2>Formação Complementar</h2>
       </div>
       <div class="col-md-9">
-        <div class="cv-item">
-          <h3>Lean Six Sigma em nível Green Belt</h3>
-          <p class="welcome">Certifica Gestão de Sistemas – Carga Horária: 70 horas.</p><br />
+    <div class="cv-item">
+        <h3>Conceitos Basicos de C#</h3>
+         <p class="welcome">Microsoft Virtual Academy</p><br />
+         <p>Introdução aos principais recursos da linguagem C# e os recursos acessíveis para C# por meio do .NET Framework.</p>
+       </div>   
+    <div class="cv-item">
+        <h3>Introdução ao framework .NET</h3>
+          <p class="welcome">Semana de Tecnologia Fatec</p><br />
+          <p>Introdução ao .NET, .NET Core e Entity Framework</p>
+        </div>
+    <div class="cv-item">
+        <h3>AngularJS: Get Started </h3>
+          <p class="welcome">Pluralsight</p><br />
+          <p>Introdução ao framework AngularJS</p>
+        </div>   
+    <div class="cv-item">
+          <h3>AngularJS Front to Back with Web API </h3>
+            <p class="welcome">Pluralsight</p><br />
+            <p>Desenvolvimento de uma aplicação utilizando AngularJS e ASP.NET Web API.</p>
+        </div>      
+    <div class="cv-item">
+            <h3>AngularJS</h3>
+             <p class="welcome">CodeCademy</p><br />
+            <p>Criação de uma aplicação web com a utilização de AngularJS e estrutura MVC.</p>
+        </div> 
+    <div class="cv-item">
+          <h3>JavaScript</h3>
+           <p class="welcome">CodeCademy</p><br />
+           <p>Conceitos fundamentais da programação em JavaScript e como usá-los, tipos de dados, funções, loops, fluxo de controle e objetos.</p>
+         </div>
+    <div class="cv-item">
+          <h3>HTML & CSS</h3>
+           <p class="welcome">CodeCademy</p><br />
+           <p>Conceitos fundamentais de HTML e CSS e como estruturar e estilizar sua pagina web.</p>
+        </div>
+    <div class="cv-item">
+         <h3>SQL </h3>
+          <p class="welcome">CodeCademy</p><br/>
+          <p>Como se comunicar com bancos de dados através do SQL, manipular dados e criar consultas.</p>
+         </div>	            
+    <div class="cv-item">
+        <h3>Lean Six Sigma em nível Green Belt</h3>
+          <p class="welcome">Certifica Gestão de Sistemas </p><br />
           <p>A formação Green Belt Lean Six Sigma tem como premissa proporcionar o entendimento dos princípios Seis Sigma e suas ferramentas, tendo como objetivo a formação de especialistas que dominem o método DMAIC e as ferramentas Lean Six Sigma e que estejam capacitados para liderar projetos geradores de resultados que contribuam para o aumento da lucratividade da empresa ou participar das equipes lideradas por Black Belts (projetos multifuncionais ou funcionais mais complexos).</p>
         </div>
-        <div class="cv-item">
-          <h3>MS. Project</h3>
-          <p class="welcome">FACENS – Carga Horária: 12 horas; </p><br />
+    <div class="cv-item">
+        <h3>MS. Project</h3>
+          <p class="welcome">FACENS </p><br />
           <p>O Microsoft Project é um poderoso aplicativo de gerenciamento de projetos que pode ser utilizado para planejar, programar e representar graficamente informações sobre projetos.</p>
         </div>
-        <div class="cv-item">
-          <h3>Negotiation Strategies</h3>
+    <div class="cv-item">
+         <h3>Negotiation Strategies</h3>
           <p class="welcome">Eaton University</p><br />
           <p>O curso "Negotiation Strategies" busca estabelecer padrões de negociação com diferentes tipos de clientes ou fornecedores(negociações de curto ou ou longo prazo), buscando sempre os melhores resultados para ambas as partes.</p>
-        </div>
-		<div class="cv-item">
-          <h3>JavaScript</h3>
-          <p class="welcome">CodeCademy</p><br />
-          <p>Conceitos fundamentais da programação em JavaScript e como usá-los, tipos de dados, funções, loops, fluxo de controle e objetos.</p>
-        </div>
-		<div class="cv-item">
-          <h3>AngularJS</h3>
-          <p class="welcome">CodeCademy</p><br />
-          <p>Criação de uma aplicação web com a utilização de AngularJS e estrutura MVC.</p>
-        </div>
-		<div class="cv-item">
-          <h3>HTML & CSS</h3>
-          <p class="welcome">CodeCademy</p><br />
-          <p>Conceitos fundamentais de HTML e CSS e como estruturar e estilizar sua pagina web.</p>
-        </div>
-		<div class="cv-item">
-          <h3>SQL </h3>
-          <p class="welcome">CodeCademy</p><br />
-          <p>Como se comunicar com bancos de dados através do SQL, manipular dados e criar consultas.</p>
-        </div>	
-		<div class="cv-item">
-          <h3>Conceitos Basicos de C#</h3>
-          <p class="welcome">Microsoft Virtual Academy</p><br />
-          <p>Introdução aos principais recursos da linguagem C# e os recursos acessíveis para C# por meio do .NET Framework.</p>
         </div>
       </div>
     </div>
