--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,7 @@
         </p>
         <div class="social-box">
           <a href="https://www.linkedin.com/in/leandrogarbim/" class="linkedin-icon" target="_blank"><i class="fa fa-linkedin"></i></a>
-          <a href="https://leandrogarbim.github.io/" class="github-icon" target="_blank"><i class="fa fa-github"></i></a>
+          <a href="https://github.com/LeandroGarbim" class="github-icon" target="_blank"><i class="fa fa-github"></i></a>
         </div>
       </div>
     </div>    
